4.x: Resource limits (#7302)
* Maximal number of TCP connections limit
* Maximal number of concurrent requests limit
* Idle connection timeout
* Align order of parameters in SocketHttpClient
* Add validation of concurrent requests for HTTP/2.
* Added support for HTTP/2 client for testing (to write that test).
* A few typos fixed (discovered as part of this task)
* Timer is in seconds, idle timeout must adhere to that.